# AASolver

./: LICENSE  README.md
AndersonOpt/: ARAP2D.cpp  ARAP3D.cpp  AndersonAcceleration.h  CMakeLists.txt  Constraint.h  DynamicsSolver.h  FileParser.h  FindFREEGLUT.cmake  GeometrySolver.h  LinearRegularization.h  MeshTypes.h  MeshVisualizer.h  OMPHelper.h  Options.txt  Parameters.h  PlanarityOpt.cpp  SPDSolver.h  SimulationOpt.h  SolverCommon.h  SparseMatrixStorage.h  TetMeshIO.h  TetMeshSimulation.cpp  TetMeshSimulation.h  TriMeshAABB.h  Types.h  WireMeshOpt.cpp
Test_files/ARAP2D_models/: bar_Handle.txt  xy_bar.txt
Test_files/ARAP3D_models/: boy.node  boy_Init.node  boy_handle.txt  xyz_boy.txt
Test_files/Simulation_models/armadillo/: armadillo.ele  armadillo.node  armadilloH.txt
Test_files/Simulation_models/hippo/: hippo.ele  hippo.node  hippoH.txt
